[gd_scene load_steps=2 format=3 uid="uid://bjxveajwwus7r"]

[ext_resource type="Script" uid="uid://dxc0k07fvq4q3" path="res://start_menu.gd" id="1_0"]

[node name="start_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="title_l" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Введите имена игроков"
horizontal_alignment = 1

[node name="players_names_cont" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="name_1_cont" type="HBoxContainer" parent="MarginContainer/VBoxContainer/players_names_cont"]
layout_mode = 2

[node name="name_1_field" type="LineEdit" parent="MarginContainer/VBoxContainer/players_names_cont/name_1_cont"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Имя игрока"
alignment = 1

[node name="limit_l" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="add_field_b" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Добавить игрока
"

[node name="confirm_b" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Подтвердить
"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/add_field_b" to="." method="_on_add_field_b_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/confirm_b" to="." method="_on_confirm_b_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
